<resources>
    <string name="app_name">Feelings</string>
    <string name="text_message">How are you feeling?</string>
    <string name="mood_button">Mood</string>
    <string name="feeling"></string>
<!-- array for emotions in spinner  -->
    <string-array name="moods">
        <item>happy</item>
        <item>zebrae-sque</item>
        <item>excommunicated</item>
        <item>sassy</item>
    </string-array>
    <string name="name_edit">Name</string>
    <string name="toggle_on">Positive</string>
    <string name="toggle_off">Negative</string>
    <string name="yoga_text">Yoga</string>
    <string name="yoga1_radio">Yin</string>
    <string name="yoga2_radio">Bikram</string>
    <string name="yoga3_radio">Hatha</string>
    <string name="enlightened_check">enlightened</string>
    <string name="conservative_check">conservative</string>
    <string name="sarcastic_check">sarcastic</string>
    <string name="secretive_check">secretive</string>
    <string name="meditate_switch">Meditate</string>
    <string name="mood_image">Mood Image</string>

</resources>
